--- a/sass/3-modules/_mobile.scss
+++ b/sass/3-modules/_mobile.scss
@@ -8,8 +8,8 @@
 		    margin: 30px 0px 20px;
 			a{   
 			    img{
-			    	height: 60px;
-			    	width: 280px;
+			    	height: 33px;
+			    	width: 60px;
 			    }
 			 }
 			}
@@ -26,7 +26,7 @@
 			.nav-arrow{
 				margin: 0px;
 				a{
-					    margin-bottom: 10px;
+					    margin-bottom: 50px;
 				}
 			}
 			
@@ -128,6 +128,15 @@
 		.about .para{
 			text-align: center;
 		}
+
+		.background .nav-boundary .nav-bottom {
+   				 height: 100vh; 	
+    		 	}
+
+    		 	.background .navbar-default .navbar-brand .logo{
+    		 		height: 60px;
+    		 		width: 60px;
+    		 	}
 }
 
 
